<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="aplication_name">Asteroides</string>
    <string name="game_play">Jugar</string>
    <string name="game_configure">Configurar</string>
    <string name="game_info">Acerca De</string>
    <string name="game_exit">Salir</string>
    <string name="game_menu_configure">Configuración</string>
    <string name="game_menu_acercade">Acerca de</string>
    <string name="game_puntacion">Ver Puntuacion</string>

</resources>