<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/degradado"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Localizacion" >

   

    <TextView
        android:id="@+id/textView1"
        style="@style/TextoAsteroides"
        android:text="@string/aplication_name" />

    <Button
        android:id="@+id/button1"
        style="@style/TextoAsteroides.botones"
        android:onClick="lanzarJuego"
        android:text="@string/game_play" />

    <Button
        android:id="@+id/button2"
        style="@style/TextoAsteroides.botones"
        android:onClick="lanzarPreferencias"
        android:text="@string/game_configure" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.botones"
        android:onClick="lanzarAcercaDe"
        android:text="@string/game_info" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.botones"
        android:onClick="lanzarPuntuaciones"
        android:text="@string/game_puntacion" />

    <Button
        android:id="@+id/button4"
        style="@style/TextoAsteroides.botones"
        android:text="@string/game_exit" />

</LinearLayout>